--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<td><a class="nav-item right" style= " margin-left: 30px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
-		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz2021/" target="_blank"><img src="images/instagram-logo.png" style="height: 28px;"></a></td>
+		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz2021/" target="_blank"><img src="images/instagram-logo.png" style="height: 20px;"></a></td>
 		</tr></tbody></table>
 		</div>
 	</div>
@@ -279,7 +279,7 @@
 <div class="fourth-big" id = "dates" align="center">
 	<p class="heading">Important Dates</p>
 	<p class="imp-info">The buzz won't be just the same, but better and bigger than ever.<br>All only if you know what it means to punctual, and deadline-fearing warrior!</p><p class="btn-btm"></p>
-	<img src="images/Important_dates-1111.png" class="imp-img">
+	<img src="images/2021/impdates.png" class="imp-img">
 </div>
 
 <div class="skew-div"></div>
