--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<td><a class="nav-item smoothscroll" href="#team">TEAM</a></td>
 	 	<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR MENTORS</td>
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
-		<td><a class="nav-item" href="https://goo.gl/b1TKhd" target="_blank">REGISTER</a></td>
+		<td><a class="nav-item" href="https://forms.office.com/r/pvEG6eMFmd" target="_blank">REGISTER</a></td>
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<td><a class="nav-item right" style= " margin-left: 30px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
@@ -74,7 +74,7 @@
 
 			<div class="box" id="hv-1"><img src="images/event-logos/programming.jpg" class="logo"><div class="hov-con"><div class="text">Programming</div></div>
 				<!-- modal-->
-				<div class="modal" id="myModal-01">
+				<!--<div class="modal" id="myModal-01">
 					<div class="modal-content">
 						<p class="tagline">“Talk is cheap,  show us the code ”</p>
 						<p class="evnt-info">This isn’t your normal programming quiz where you are asked to solve and write the problems. Here, you will be tested on your speed, coding that make one a true programmer, yes, they do!<br>
@@ -86,11 +86,11 @@
 						<p class="team-eligibility">No of Teams/School – 1 <br>
 							No. of Participants/Team – 1</p>
 					</div>
-				</div>
+				</div>-->
 				<!--modal closes-->
 			</div>
 			<div class="box" id="hv-2"><img src="images/event-logos/buzzer.jpg" class="logo"><div class="hov-con"><div class="text">Buzzer</div></div>
-				<div class="modal" id="myModal-02">
+				<!--<div class="modal" id="myModal-02">
 					<div class="modal-content">
 						<p class="tagline">“Life is a big canvas throw all the paint you can on it.”</p>
 						<p class="evnt-info">Students will make a drawing in MS Paint. Convert your file into JPEG and will send that on mmunjal@aisg43.amity.edu. Downloaded material from Internet is strictly prohibited. <br>
@@ -100,7 +100,7 @@
 							No. of Participants/Team – 1</p>
 
 					</div>
-				</div>
+				</div>-->
 			</div>
 			
 			<div class="box" id="hv-4"><img src="images/event-logos/chalchitra.jpg" class="logo"><div class="hov-con"><div class="text">Movie Making</div></div>
@@ -368,8 +368,9 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Flick</span></div></td>
-		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">koyaldas@gmail.com</div></div><span class = "mem-name-end">Koyal Das</span><br><span class="mem-evnt">Leviosway</span></div></td></tr>
+		<td><div class="tbox"><img src="images/2021/membs/akshat.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">groverakshat2007@gmail.com</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Flick</span></div>
+		</td></tr>
 
 		<tr><td><div class="tbox"><img src="images/2021/membs/manchit.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">manchitrachit2017@gmail.com</div></div><span class = "mem-name-end">Manchit Vaid</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
@@ -379,18 +380,28 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<td><div class="tbox"><img src="images/2021/membs/yesha.png" class="memb"><div class="mem">
 		<div class = "mem-name">yeshasikka240@gmail.com</div></div><span class = "mem-name-end">Yesha Sikka</span><br><span class="mem-evnt">Masquerades</span></div></td></tr>
 
-		<tr><td><div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div></td>
+		<tr><td><div class="tbox"><img src="images/2021/membs/avni.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">avni.munjal@ais.amity.edu</div></div><span class = "mem-name-end">Avni Munjal</span><br><span class="mem-evnt">Masquerades</span></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">Spark'IT Up</span></div></td>
 
-		<td><div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
+		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">eshnachhillar27@gmail.com</div></div><span class = "mem-name-end">Eshna Chhillar</span><br><span class="mem-evnt">Spark'IT Up</span></div></td></tr>
 
-		<tr><td></td>
-		<td><div class="tbox"><img src="images/2021/membs/akshat.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">groverakshat2007@gmail.com</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Flick</span></div>
-		</td><td></td></tr>
+	<tr>
+		<td>
+		<div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div>
+		</td>
+
+		<td><div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
+		</td>
+
+		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">koyaldas@gmail.com</div></div><span class = "mem-name-end">Koyal Das</span><br><span class="mem-evnt">Leviosway</span></div>
+	</td>
+	</tr>
 
 	</table>
 	</div>
@@ -411,8 +422,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		</tbody>
 	</table></div>
 
-	<div class="links">Email : amitycyberbuzz@gmail.com<br> Facebook: <a class = "link-fb" href="https://fb.com/amitycyberbuzz">fb.com/amitycyberbuzz</a><br>
-		Official Invite: <a class="link-fb" href="">CyberBuzz2021</a>
+	<div class="links">Email : amitycyberbuzz@gmail.com<br> Facebook: <a class = "link-fb" href="https://fb.com/amitycyberbuzz" target = '_blank'>fb.com/amitycyberbuzz</a><br>
+		Official Invite: <a class="link-fb" href="https://bit.ly/3wNTp0b" target = "_blank">CyberBuzz2021</a>
 	</div>
 	<div class="last-logo"><img src="images/logo.png" class="last-logo-img"></div>
 </div>
