mems and navbar

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 	 	<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR MENTORS</td>
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
 		<td><a class="nav-item" href="https://forms.office.com/r/pvEG6eMFmd" target="_blank">REGISTER</a></td>
+		<td><a class="nav-item smoothscroll" href="#contact">OFFICIAL INVITE</a></td>
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
-		<td><a class="nav-item right" style= " margin-left: 30px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
+		<td><a class="nav-item right" style= " margin-left: 0px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
 		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz2021/" target="_blank"><img src="images/instagram-logo.png" style="height: 20px;"></a></td>
 		</tr></tbody></table>
 		</div>
@@ -385,7 +386,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">Spark'IT Up</span></div></td>
 
-		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
+		<td><div class="tbox"><img src="images/2021/membs/eshna.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">eshnachhillar27@gmail.com</div></div><span class = "mem-name-end">Eshna Chhillar</span><br><span class="mem-evnt">Spark'IT Up</span></div></td></tr>
 
 	<tr>
