--- a/index.html
+++ b/index.html
@@ -391,19 +391,27 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 	<tr>
 		<td>
+		<div class="tbox"><img src="images/2021/membs/tannya.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">tannyapasricha23@gmail.com</div></div><span class = "mem-name-end">Tannya Pasricha</span><br><span class="mem-evnt">Leviosway</span></div>
+		</td>
+
+		<td>
+		<div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">koyaldas@gmail.com</div></div><span class = "mem-name-end">Koyal Das</span><br><span class="mem-evnt">Leviosway</span></div>
+		</td>
+
+		<td>
+		<div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
+	</td>
+	</tr>
+	<tr><td></td>
+		<td>
 		<div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div>
 		</td>
-
-		<td><div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
-		</td>
-
-		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">koyaldas@gmail.com</div></div><span class = "mem-name-end">Koyal Das</span><br><span class="mem-evnt">Leviosway</span></div>
-	</td>
+		<td></td>
 	</tr>
-
 	</table>
 	</div>
 
