--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	 	<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR MENTORS</td>
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
 		<td><a class="nav-item" href="https://forms.office.com/r/pvEG6eMFmd" target="_blank">REGISTER</a></td>
-		<td><a class="nav-item smoothscroll" href="#contact">OFFICIAL INVITE</a></td>
+		<td><a class="nav-item smoothscroll" href="https://drive.google.com/drive/folders/1ACSwffUIJqe2cpl8fnPBHvWs_gOCRVmm">OFFICIAL INVITE</a></td>
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<td><a class="nav-item right" style= " margin-left: 0px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
