--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</tr></tbody></table>
 		</div>
 	</div>
-	<div class="head-info"><p class = "date" style="margin: 0;">MAY 1, 2021</p><div class = "time-info" id="time-set"></div></div>
+	<div class="head-info"><div class = "time-info" id="time-set">POSTPONED</div><p class = "date" style="margin: 0;">UNTIL FURTHER NOTICE</p></div>
 </div>
 <div class="second-big" id="about">
 	<div class="img-info"><img src="images/Laptop_Graphic.png" class="img-info-real"></div>
@@ -444,7 +444,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
 
-<script>
+<!--<script>
 // Set the date we're counting down to
 var countDownDate = new Date("May 1, 2021 11:00:00").getTime();
 // Update the count down every 1 second
@@ -467,6 +467,6 @@ var x = setInterval(function() {
         document.getElementById("time-set").innerHTML = "Get ready";
     }
 }, 1000);
-</script>
+</script>-->
 </body>
 </html>
