--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<td><div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Anuvrat Arya</span><br><span class="mem-evnt">Clic(k)he</span></div></td></tr>
-		<tr><td><div class="tbox"><img src="images/2021/membs/mansha.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">mansharapria@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">Clic(k)he</span></td>
+		<tr><td><div class="tbox"><img src="images/2021/membs/eshaan.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">eshaanramaul25@gmail.com</div></div><span class = "mem-name-end">Eshaan Ramaul</span><br><span class="mem-evnt">Clic(k)he</span></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/vaibhavy.png" class="memb"><div class="mem">
 		<div class = "mem-name">vaibhavydarshan08@gmail.com</div></div><span class = "mem-name-end">Vaibhavy Darshan</span><br><span class="mem-evnt">Chalchitra</span></div></td>
@@ -404,13 +404,16 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
 	</td>
-	</tr>
-	<tr><td></td>
+	</tr></table>
+	<table id = "memberss" align="center" style="width: 100%"><tr style="width: 100%;">
+		<td style="width: 50%">
+		<div class="tbox"><img src="images/2021/membs/mansha.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">mansharapria@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">E-Brochure</span></div>
+		</td>
 		<td>
 		<div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div>
-		</td>
-		<td></td>
+		</td>	
 	</tr>
 	</table>
 	</div>
