--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<td><a class="nav-item smoothscroll" href="#team">TEAM</a></td>
 	 	<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR MENTORS</td>
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
-		<td><a class="nav-item" href="https://forms.office.com/r/pvEG6eMFmd" target="_blank">REGISTER</a></td>
-		<td><a class="nav-item smoothscroll" href="https://drive.google.com/drive/folders/1ACSwffUIJqe2cpl8fnPBHvWs_gOCRVmm" target = "_blank">OFFICIAL INVITE</a></td>
+		<td><a class="nav-item" href="https://bit.ly/3xIOlKM" target="_blank">REGISTER</a></td>
+		<td><a class="nav-item smoothscroll" href="https://bit.ly/3wNTp0b" target = "_blank">OFFICIAL INVITE</a></td>
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<td><a class="nav-item right" style= " margin-left: 0px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
@@ -56,7 +56,7 @@
 		</tr></tbody></table>
 		</div>
 	</div>
-	<div class="head-info"><div class = "time-info" id="time-set">POSTPONED</div><p class = "date" style="margin: 0;">UNTIL FURTHER NOTICE</p></div>
+	<div class="head-info"><div class = "time-info" id="time-set"></div><p class = "date" style="margin: 0;">7TH AUGUST, 2021<br>The BUZZ is back!</p></div>
 </div>
 <div class="second-big" id="about">
 	<div class="img-info"><img src="images/Laptop_Graphic.png" class="img-info-real"></div>
@@ -447,9 +447,9 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
 
-<!--<script>
+<script>
 // Set the date we're counting down to
-var countDownDate = new Date("May 1, 2021 11:00:00").getTime();
+var countDownDate = new Date("Aug 7, 2021 11:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
     // Get todays date and time
@@ -470,6 +470,6 @@ var x = setInterval(function() {
         document.getElementById("time-set").innerHTML = "Get ready";
     }
 }, 1000);
-</script>-->
+</script>
 </body>
 </html>
