--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</tr></tbody></table>
 		</div>
 	</div>
-	<div class="head-info"><div class = "time-info" id="time-set"></div><p class = "date" style="margin: 0;">7TH AUGUST, 2021<br>The BUZZ is back!</p></div>
+	<div class="head-info"><div class = "time-info" id="time-set"></div><p class = "date" style="margin: 0;">7TH AUGUST, 2021<br><p style="font-size: 20px; line-height: normal;">Note: Those who registered previously need to re-register!</p></p></div>
 </div>
 <div class="second-big" id="about">
 	<div class="img-info"><img src="images/Laptop_Graphic.png" class="img-info-real"></div>
