--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
 		</div>
 	</div>
 	<div class="head-info"><div class = "time-info" id="time-set"></div><p class = "date" style="margin: 0;">7TH AUGUST, 2021<br><p style="font-size: 20px; line-height: normal;">Note: Those who registered previously need to re-register!</p></p></div>
+	<a href="https://discord.io/CyberBuzz2k21" target="_blank"><div class = "head-info" id = "discord">
+		DISCORD
+		<p style="font-size: 10px; line-height: 0px; margin-top: 0px; letter-spacing: 3px;">JOIN OUR DISCORD!</p>
+	</div></a>
 </div>
+
 <div class="second-big" id="about">
 	<div class="img-info"><img src="images/Laptop_Graphic.png" class="img-info-real"></div>
 	<div class="info"><div class="container"><span class = "heading">About Cyber Buzz</span><br><br><br>
