--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</tr></tbody></table>
 		</div>
 	</div>
-	<div class="head-info"><div class = "time-info" id="time-set"></div><p class = "date" style="margin: 0;">7TH AUGUST, 2021<br><p style="font-size: 20px; line-height: normal;">Note: Those who registered previously need to re-register!</p></p></div>
+	<div class="head-info"><div class = "time-info" id="time-set"></div><p class = "date" style="margin: 0;">28TH AUGUST, 2021<br></p></div>
 	<a href="https://discord.io/CyberBuzz2k21" target="_blank"><div class = "head-info" id = "discord">
 		DISCORD
 		<p style="font-size: 10px; line-height: 0px; margin-top: 0px; letter-spacing: 3px;">JOIN OUR DISCORD!</p>
@@ -454,7 +454,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Aug 7, 2021 11:00:00").getTime();
+var countDownDate = new Date("Aug 28, 2021 11:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
     // Get todays date and time
