--- a/index.html
+++ b/index.html
@@ -246,6 +246,22 @@
 				</div>
 			</div>
 
+			<div class="box" id="hv-10"><img src="images/2021/events/playgue.jpg" class="logo"><div class="hov-con"><div class="text">PLA(Y)GUÉ</div></div>
+				<div class="modal" id="myModal-10">
+					<div class="modal-content">
+						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
+						<p class="evnt-info">Upload the entry on Google Drive/Drop box and email the link to sjoshi@aisg43.amity.edu. Only selected teams will battle out for prizes. Besides the originality and appeal of the design, functionality and creativity will be fetching points.<br>
+							<b>And remember, your &lt;html&gt; code should be spic n’ &lt;span&gt; ;)</b><br>
+							<b>Languages:</b>*HTML, CSS, Javascript, Jquery<br>
+							<b>Software provided:</b>Sublime Text, Adobe Photoshop<br>
+							*Participants are advised to refrain from using templates and copying code.<br>
+							Eligibility – IX-X<br>
+						</p>
+						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
+						</div>
+				</div>
+			</div>
+
 			<div class="box" id="hv-10"><img src="images/2021/events/roleplay.png" class="logo"><div class="hov-con"><div class="text">Fancy Dress</div></div>
 				<div class="modal" id="myModal-10">
 					<div class="modal-content">
@@ -276,6 +292,7 @@
 						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
 						</div>
 				</div>
+
 			</div>
 		</div>
 	</div>
@@ -365,7 +382,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<tr><td><div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">siddharth.kishore09@gmail.com</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/nishant.png" class="memb"><div class="mem">
-		<div class = "mem-name">thecardboardgaming@gmail.com</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div></td>
+		<div class = "mem-name">thecardboardgaming@gmail.com</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer, PLA(Y)GUÉ</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Mihir Kumar</span><br><span class="mem-evnt">Trial by Combat</span></div></td></tr>
@@ -409,15 +426,19 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
 	</td>
-	</tr></table>
-	<table id = "memberss" align="center" style="width: 100%"><tr style="width: 100%;">
-		<td style="width: 50%">
+	</tr>
+	<tr>
+		<td>
 		<div class="tbox"><img src="images/2021/membs/mansha.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">mansharapria@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">E-Brochure</span></div>
 		</td>
 		<td>
 		<div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div>
+		</td>
+		<td>
+		<div class="tbox"><img src="images/2021/membs/arnav.png" class="memb"><div class="mem">
+		<div class = "mem-name">arnav.khurana2204@gmail.com</div></div><span class = "mem-name-end">Arnav Khurana</span><br><span class="mem-evnt">PLA(Y)GUÉ</span></div>
 		</td>	
 	</tr>
 	</table>
