--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
          
          <a href="https://www.instagram.com/eshaan.ok/" target="_blank">
          <img src="images/2022/membs/eshaan.jpeg" class="memb"><div class="mem">
-     <div class = "mem-name">eshaanramaul@gmail.com</div></div></a><span class = "mem-name-end">Eshaan Ramaul</span><br><span class="mem-evnt">C1UE5</span></div>
+     <div class = "mem-name">eshaanramaul@gmail.com</div></div></a><span class = "mem-name-end">Eshaan Ramaul</span><br><span class="mem-evnt"></span></div>
 
    
 
@@ -303,12 +303,12 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	<a href="https://www.instagram.com/adityagroverr/" target="_blank">
 	<img src="images/2022/membs/aditya.jpeg" class="memb"><div class="mem">
 <div class = "mem-name">adityagrover111@gmail.com
-</div></div></a><span class = "mem-name-end">Eshaan Ramaul/span><br><span class="mem-evnt">C1ue5</span></div></div>
+</div></div></a><span class = "mem-name-end">Eshaan Ramaul/span><br><span class="mem-evnt"></span></div></div>
 <div class = 'teambox2' style="margin-left: 100px;">
 	<span class = "designation" style="font-family: 'Raleway';font-weight: 350;margin-left: 12%;">Deputy VP</span> 
 <div class="tbox" style="margin-left: 5%;"> 
 	<a href="https://www.instagram.com/hridsjain/" target="_blank"><img src="images/2022/membs/hridey.jpeg	" class="memb"><div class="mem">
-<div class = "mem-name">hrideyjain27@gmail.com</div></div></a><span class = "mem-name-end">Hridey Jain</span><br><span class="mem-evnt">Opus</span></div>
+<div class = "mem-name">hrideyjain27@gmail.com</div></div></a><span class = "mem-name-end">Hridey Jain</span><br><span class="mem-evnt"></span></div>
   </div></div>
   <br><br>
   <h1 style="font-family: 'Raleway';font-weight: 800;font-size: 28px;padding-top: 30px;padding-bottom: 30px;background:-webkit-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
