--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	<a href="https://www.instagram.com/adityagroverr/" target="_blank">
 	<img src="images/2022/membs/aditya.jpeg" class="memb"><div class="mem">
 <div class = "mem-name">adityagrover111@gmail.com
-</div></div></a><span class = "mem-name-end">Eshaan Ramaul/span><br><span class="mem-evnt"></span></div></div>
+</div></div></a><span class = "mem-name-end">Aditya Grover</span><br><span class="mem-evnt"></span></div></div>
 <div class = 'teambox2' style="margin-left: 100px;">
 	<span class = "designation" style="font-family: 'Raleway';font-weight: 350;margin-left: 12%;">Deputy VP</span> 
 <div class="tbox" style="margin-left: 5%;"> 
