--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
 		<td><a class="nav-item" href=" https://forms.office.com/r/hnUH5tGMPd" target="_blank">REGISTER</a></td>
 		<td><a class="nav-item smoothscroll" href=" https://bit.ly/3RNcuJU" target = "_blank">OFFICIAL INVITE</a></td>
-<!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
+	<td><a class="nav-item" href="https://drive.google.com/drive/folders/1yEIU0XbTS67oDJ6hfi3EuMm1ssAR2vio" target="_blank">RESULTS</a></td>  
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<!-- <td><a class="nav-item right" style= " margin-left: 0px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td> -->
 		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz21/" target="_blank"><img src="images/instagram-logo.png" style="height: 20px;"></a></td>
